--- a/examples/example01.html
+++ b/examples/example01.html
@@ -6,6 +6,11 @@
     </head>
 
     <body>
-        Body of the Example 1.
+        <div>Body of the Example 1.</div>
+        <div>
+            In this paragraph,
+            <span>this is in a span element (phrasing / inline content).</span>
+            And this is outside but in a div element (flow / block-level content).
+        </div>
     </body>
 </html>
