Edit CSS for responsive margin.

--- a/examples/newyear/index.html
+++ b/examples/newyear/index.html
@@ -11,37 +11,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="row-heading">Chúc mừng năm 2023!</div>
-    <div class="text-content">
-        <p>Cảm ơn các bạn đã đồng hành cùng với <span class="text-brand">KonTrymNon</span>
-        trong suốt thời gian qua. Trong năm 2022, trang Facebook <span class="text-brand">KonTrymNon</span>
-        đã được <span class="text-brand">500+</span> tài khoản yêu thích và
-        <span class="text-brand">600+</span> tài khoản theo dõi.</p>
-        <p>Năm 2023, <span class="text-brand">KonTrymNon</span> sẽ tiếp tục đem tới
-        cho các bạn những nội dung thú vị và bổ ích về nghiên cứu y học, Excel, và lập trình.</p>
-    </div>
-    <div id="panel-options">
-        <div class="text-question">
-            Xin hãy đề xuất những nội dung bạn muốn được biết nhiều hơn trong năm 2023 nhé.
+    <div class="container">
+        <div class="row-heading">Chúc mừng năm 2023!</div>
+        <div class="text-content">
+            <p>Cảm ơn các bạn đã đồng hành cùng với <span class="text-brand">KonTrymNon</span>
+            trong suốt thời gian qua. Trong năm 2022, trang Facebook <span class="text-brand">KonTrymNon</span>
+            đã được <span class="text-brand">500+</span> tài khoản yêu thích và
+            <span class="text-brand">600+</span> tài khoản theo dõi.</p>
+            <p>Năm 2023, <span class="text-brand">KonTrymNon</span> sẽ tiếp tục đem tới
+            cho các bạn những nội dung thú vị và bổ ích về nghiên cứu y học, Excel, và lập trình.</p>
         </div>
-        <table class="option">
-            <tr>
-                <td><span class="option-number"></span></td>
-                <td class="option-content">Nghiên cứu y học (dịch tễ, thống kê, v.v.)</td>
-            </tr>
-            <tr>
-                <td><span class="option-number"></span></td>
-                <td class="option-content">Lập trình (Python, R, v.v.)</td>
-            </tr>
-            <tr>
-                <td><span class="option-number"></span></td>
-                <td class="option-content">Kĩ năng Excel</td>
-            </tr>
-            <tr>
-                <td><span class="option-number"></span></td>
-                <td class="option-content">Kiến thức khác (kĩ năng mềm, y tế công cộng, v.v.)</td>
-            </tr>
-        </table>
-    </div>
+        <div id="panel-options">
+            <div class="text-question">
+                Xin hãy đề xuất những nội dung bạn muốn được biết nhiều hơn trong năm 2023 nhé.
+            </div>
+            <table class="option">
+                <tr>
+                    <td><span class="option-number"></span></td>
+                    <td class="option-content">Nghiên cứu y học (dịch tễ, thống kê, v.v.)</td>
+                </tr>
+                <tr>
+                    <td><span class="option-number"></span></td>
+                    <td class="option-content">Lập trình (Python, R, v.v.)</td>
+                </tr>
+                <tr>
+                    <td><span class="option-number"></span></td>
+                    <td class="option-content">Kĩ năng Excel</td>
+                </tr>
+                <tr>
+                    <td><span class="option-number"></span></td>
+                    <td class="option-content">Kiến thức khác (kĩ năng mềm, y tế công cộng, v.v.)</td>
+                </tr>
+            </table>
+        </div>
+        </div>
 </body>
 </html>
