Edit Prescription demo.

--- a/examples/prescription/index.html
+++ b/examples/prescription/index.html
@@ -39,10 +39,10 @@
                     <td><input type="text" class="pres-col-instruction pad-med" id="pres-row-instruction-input-0"></td>
                     <td>
                         <div class="pres-col-buttons">
-                            <button type="button" id="btn-new-add" title="Add">
+                            <button type="button" id="btn-new-add" title="Thêm">
                                 <span class="material-symbols-outlined">add</span>
                             </button>
-                            <button type="button" id="btn-new-clear" title="Clear">
+                            <button type="button" id="btn-new-clear" title="Xóa nội dung">
                                 <span class="material-symbols-outlined">clear_all</span>
                             </button>
                         </div>
