--- a/examples/prescription/index.html
+++ b/examples/prescription/index.html
@@ -51,9 +51,9 @@
             </tbody>
         </table>
         <div id="prescription-buttons">
-            <button type="button" class="button-cyan" id="btn-clear" accesskey="x"><u>X</u>óa</button>
-            <button type="button" class="button-cyan" id="btn-submit" accesskey="n"><u>N</u>hập</button>
-            <button type="button" class="button-cyan" id="btn-cancel" accesskey="h"><u>H</u>ủy</button>
+            <button type="button" class="button-cyan" id="btn-clear" accesskey="k"><u>K</u>ê lại từ đầu</button>
+            <button type="button" class="button-cyan" id="btn-submit" accesskey="l"><u>L</u>ưu đơn thuốc</button>
+            <button type="button" class="button-cyan" id="btn-cancel" accesskey="h"><u>H</u>ủy kê đơn</button>
         </div>
         <div id="div-message"></div>
     </form>
